add some coverage in trajectory service test